--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,16 @@
 apply plugin: 'antlr'
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: "scala"
 
 sourceCompatibility = 1.7
 
 final GENERATED_MAIN = "src-gen/main/java"
 final GENERATED_TEST = "src-gen/test/java"
+
+ext {
+    scalaVersion = '2.11.7'
+}
 
 sourceSets {
     main {
@@ -22,6 +27,7 @@ repositories {
 
 dependencies {
     antlr "org.antlr:antlr4:4.5.2"
+    compile "org.scala-lang:scala-library:$scalaVersion"
 }
 
 generateGrammarSource.doFirst {
