Added spec task to Gradle since ScalaTest doesnt hook properly with Gradle test task

--- a/build.gradle
+++ b/build.gradle
@@ -77,3 +77,9 @@ static def extractPackageNameFromGrammerFile(File grammarFile) {
 task wrapper(type: Wrapper) {
     gradleVersion = '2.10'
 }
+
+task spec(dependsOn: ['testClasses'], type: JavaExec) {
+    main = 'org.scalatest.tools.Runner'
+    args = ['-R', 'build/classes/test', '-o']
+    classpath = sourceSets.test.runtimeClasspath
+}
