--- a/build.gradle
+++ b/build.gradle
@@ -83,3 +83,10 @@ task spec(dependsOn: ['testClasses'], type: JavaExec) {
     args = ['-R', 'build/classes/test', '-o']
     classpath = sourceSets.test.runtimeClasspath
 }
+
+task run(type: JavaExec) {
+    main = 'ar.edu.unq.parse.tp1.Main'
+    classpath = sourceSets.main.runtimeClasspath
+
+    systemProperty "target", System.getProperty("target")
+}
