--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     antlr "org.antlr:antlr4:4.5.2"
     compile "org.scala-lang:scala-library:$scalaVersion"
     compile "org.scalatest:scalatest_2.11:3.0.0"
+    compile "org.apache.commons:commons-lang3:3.5"
 }
 
 generateGrammarSource {
